# integralTrapOpenMP

./: CMakeLists.txt  README.md  mainMPITrap.c  mainOpenMPMatrix.c  mainOpenMPTrap.c  performance.sh
